--- a/StartlingTerrorTales/StartlingTerrorTales.html
+++ b/StartlingTerrorTales/StartlingTerrorTales.html
@@ -24,6 +24,14 @@
 <div class="mySlides" style="text-align: center;"><img src="StartlingTerrorTales03.jpg" title="cover by L.B. Cole"></div>
 <div class="mySlides" style="text-align: center;"><img src="StartlingTerrorTales04.jpg" title="cover by L.B. Cole"></div>
 <div class="mySlides" style="text-align: center;"><img src="StartlingTerrorTales05.jpg" title="cover by L.B. Cole"></div>
+<div class="mySlides" style="text-align: center;"><img src="StartlingTerrorTales06.jpg" title="cover by L.B. Cole"></div>
+<div class="mySlides" style="text-align: center;"><img src="StartlingTerrorTales07.jpg" title="cover by L.B. Cole"></div>
+<div class="mySlides" style="text-align: center;"><img src="StartlingTerrorTales08.jpg" title="cover by L.B. Cole"></div>
+<div class="mySlides" style="text-align: center;"><img src="StartlingTerrorTales09.jpg" title="cover by L.B. Cole"></div>
+<div class="mySlides" style="text-align: center;"><img src="StartlingTerrorTales10.jpg" title="cover by L.B. Cole"></div>
+<div class="mySlides" style="text-align: center;"><img src="StartlingTerrorTales11.jpg" title="cover by L.B. Cole"></div>
+<div class="mySlides" style="text-align: center;"><img src="StartlingTerrorTales12.jpg" title="cover by L.B. Cole"></div>
+<div class="mySlides" style="text-align: center;"><img src="StartlingTerrorTales13.jpg" title="cover by L.B. Cole"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
