--- a/index.html
+++ b/index.html
@@ -6657,6 +6657,13 @@
 </tr>
 
 <tr>
+<td>Horror From the Tomb</td>
+<td>1954</td>
+<td>Premier</td>
+<td><a href="HorrorFromTheTomb/HorrorFromTheTomb.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Horror of Collier County</td>
 <td>1999</td>
 <td>Dark Horse</td>
