--- a/BillSienkiewicz/BillSienkiewicz.html
+++ b/BillSienkiewicz/BillSienkiewicz.html
@@ -25,6 +25,7 @@
 <div class="mySlides" style="text-align: center;"><img src="BillSienkiewicz05.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BillSienkiewicz06.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BillSienkiewicz07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BillSienkiewicz08.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
