--- a/TombOfDarkness/TombOfDarkness.html
+++ b/TombOfDarkness/TombOfDarkness.html
@@ -8,10 +8,8 @@
 </head>
 
 <body>
-<img src="TombOfDarkness9.jpg"> <br>
-Series: 15 issues (#9 - 23) 1974<br>
-Cover by Larry Lieber and Frank Giacoia<br>
-Publisher: Marvel<br>
+<img src="TombOfDarkness9.jpg" title="Cover by Larry Lieber and Frank Giacoia"> <br>
+15 issues (#9 - 23) 1974 by Marvel<br>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -22,6 +20,20 @@ Publisher: Marvel<br>
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="TombOfDarkness9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TombOfDarkness10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TombOfDarkness11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TombOfDarkness12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TombOfDarkness13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TombOfDarkness14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TombOfDarkness15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TombOfDarkness16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TombOfDarkness17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TombOfDarkness18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TombOfDarkness19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TombOfDarkness20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TombOfDarkness21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TombOfDarkness22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TombOfDarkness23.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
