--- a/Tintin/Tintin.html
+++ b/Tintin/Tintin.html
@@ -21,6 +21,20 @@ Publisher: Casterman<br>
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="Tintin1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Tintin2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Tintin3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Tintin4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Tintin5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Tintin6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Tintin7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Tintin8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Tintin9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Tintin10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Tintin11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Tintin12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Tintin13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Tintin14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Tintin15.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
