--- a/index.html
+++ b/index.html
@@ -7463,6 +7463,13 @@
 </tr>
 
 <tr>
+<td>Jumbo Comics</td>
+<td>1938</td>
+<td>Fiction House</td>
+<td><a href="JumboComics/JumboComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jungle Action</td>
 <td>1954</td>
 <td>Atlas</td>
@@ -7500,7 +7507,7 @@
 <tr>
 <td>Juxtapoz</td>
 <td>1994</td>
-<td>High Speed Productions</td>
+<td>High Speed</td>
 <td><a href="Juxtapoz/Juxtapoz.html">Details</a></td>
 </tr>
 
@@ -11993,6 +12000,13 @@
 <td>1958</td>
 <td>Charlton</td>
 <td><a href="SpaceAdventures/SpaceAdventures.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Space Detective</td>
+<td>1951</td>
+<td>Avon</td>
+<td><a href="SpaceDetective/SpaceDetective.html">Details</a></td>
 </tr>
 
 <tr>
