--- a/index.html
+++ b/index.html
@@ -13942,6 +13942,13 @@
 </tr>
 
 <tr>
+<td>Wings Comics</td>
+<td>1940</td>
+<td>Fiction House</td>
+<td><a href="WingsComics/WingsComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Winsor McCay</td>
 <td>1866</td>
 <td>Creator</td>
