--- a/index.html
+++ b/index.html
@@ -12997,6 +12997,13 @@
 </tr>
 
 <tr>
+<td>Tip Top</td>
+<td>1936</td>
+<td>United Feature</td>
+<td><a href="TipTop/TipTop.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Todd Schorr</td>
 <td>1954</td>
 <td>Creator</td>
