--- a/TipTop/TipTop.html
+++ b/TipTop/TipTop.html
@@ -20,12 +20,21 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="TipTop1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TipTop2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TipTop3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TipTop4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TipTop5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TipTop6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TipTop7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TipTop8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TipTop9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TipTop10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-
+Tip Top #1 among other things, features the first comic book appearance of Tarzan. This series is a collection of comics. The complete list of issue #1 comics include: Tarzan, Lil Abner, Grin and Bear It, Ella Cinders, Chris Crusty, How It Began, Joe Jinks, Broncho Bill, The Captain and the Kids, For Junior Readers, Fritzi Ritz, Looy Dot Dope, Little Marry Mixup, Benny, The Boys of Wynnecastle, Divot Diggers, Cynical Susie, Peter Pat, Billy Make-Belive, Danny Dingle, Bob Brinkerhoff's Comic Drawing Lesson, Mr. and Mrs. Beans, Bucky and His Pals, Alice In Wonerland, All In The Family, How To Make It.
 </p>
 </body>
 </html>
