--- a/ShadeTheChangingMan/ShadeTheChangingMan.html
+++ b/ShadeTheChangingMan/ShadeTheChangingMan.html
@@ -9,8 +9,7 @@
 
 <body>
 <img src="ShadeTheChangingMan1.jpg"> <img src="Shade1990series1.jpg"><br>
-Series: 8 issues 1977, 70 issues 1990 - 1996, 3 issues 2003<br>
-Publisher: DC<br>
+8 issues in 1977, 70 issues from 1990 - 1996, 3 issues in 2003 by DC
 <p>
 
 <div class="row"><div class="column">
