--- a/index.html
+++ b/index.html
@@ -11618,6 +11618,13 @@
 </tr>
 
 <tr>
+<td>Shade the Changing Man</td>
+<td>1977</td>
+<td>DC</td>
+<td><a href="ShadeTheChangingMan/ShadeTheChangingMan.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Shadow</td>
 <td>1931</td>
 <td>Street and Smith</td>
