--- a/index.html
+++ b/index.html
@@ -5979,6 +5979,13 @@
 </tr>
 
 <tr>
+<td>Ghostly Tales</td>
+<td>1966</td>
+<td>Charlton</td>
+<td><a href="GhostlyTales/GhostlyTales.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ghosts</td>
 <td>1971</td>
 <td>DC</td>
@@ -13760,6 +13767,13 @@
 </tr>
 
 <tr>
+<td>Weird War Tales</td>
+<td>1971</td>
+<td>DC</td>
+<td><a href="WeirdWarTales/WeirdWarTales.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Weird Wonder Tales</td>
 <td>1973</td>
 <td>Marvel</td>
@@ -13988,6 +14002,13 @@
 <td>2004</td>
 <td>Marvel</td>
 <td><a href="Witches/Witches.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Witching Hour</td>
+<td>1969</td>
+<td>DC</td>
+<td><a href="WitchingHour/WitchingHour.html">Details</a></td>
 </tr>
 
 <tr>
