--- a/index.html
+++ b/index.html
@@ -12108,6 +12108,13 @@
 </tr>
 
 <tr>
+<td>Spicy Mystery Stories</td>
+<td>1934</td>
+<td>Culture Publications</td>
+<td><a href="SpicyMysteryStories/SpicyMysteryStories.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Spicy Tales</td>
 <td>1988</td>
 <td>Eternity</td>
