--- a/index.html
+++ b/index.html
@@ -13508,6 +13508,13 @@
 </tr>
 
 <tr>
+<td>Vinegar Teeth</td>
+<td>2018</td>
+<td>Dark Horse</td>
+<td><a href="VinegarTeeth/VinegarTeeth.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Vinyl Underground</td>
 <td>2007</td>
 <td>Vertigo</td>
