--- a/index.html
+++ b/index.html
@@ -2916,6 +2916,13 @@
 </tr>
 
 <tr>
+<td>Captain Aero</td>
+<td>1941</td>
+<td>Temerson</td>
+<td><a href="CaptainAero/CaptainAero.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Captain America</td>
 <td>1941</td>
 <td>Timely</td>
