--- a/index.html
+++ b/index.html
@@ -2223,6 +2223,13 @@
 </tr>
 
 <tr>
+<td>Beware! Terror Tales</td>
+<td>1952</td>
+<td>Fawcett</td>
+<td><a href="BewareTerrorTales/BewareTerrorTales.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Beware the Creeper</td>
 <td>1968</td>
 <td>DC</td>
