--- a/index.html
+++ b/index.html
@@ -9598,6 +9598,13 @@
 </tr>
 
 <tr>
+<td>Mysterious Adventures</td>
+<td>1951</td>
+<td>Story</td>
+<td><a href="MysteriousAdventures/MysteriousAdventures.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mystery Men</td>
 <td>1939</td>
 <td>Fox</td>
@@ -14114,6 +14121,13 @@
 <td>1956</td>
 <td>Atlas</td>
 <td><a href="WorldOfSuspense/WorldOfSuspense.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Worlds of Fear</td>
+<td>1952</td>
+<td>Fawcett</td>
+<td><a href="WorldsOfFear/WorldsOfFear.html">Details</a></td>
 </tr>
 
 <tr>
