--- a/WorldsOfFear/WorldsOfFear.html
+++ b/WorldsOfFear/WorldsOfFear.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-<img src="WorldsOfFear1.jpg"> <br>
-
+<img src="WorldsOfFear2.jpg"> <br>
+9 issues (#2 -10) from 1952-1953 by Fawcett
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -19,18 +19,21 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="WorldsOfFear1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WorldsOfFear2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WorldsOfFear3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WorldsOfFear4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WorldsOfFear5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WorldsOfFear6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WorldsOfFear7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WorldsOfFear8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WorldsOfFear9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WorldsOfFear10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-
+The numbering continues from <a href="../WorldsBeyond/WorldsBeyond.html">Worlds Beyond</a> (Fawcett, 1951 series) #1
 </p>
 </body>
 </html>
