--- a/index.html
+++ b/index.html
@@ -14124,6 +14124,13 @@
 </tr>
 
 <tr>
+<td>Worlds Beyond</td>
+<td>1951</td>
+<td>Fawcett</td>
+<td><a href="WorldsBeyond/WorldsBeyond.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Worlds of Fear</td>
 <td>1952</td>
 <td>Fawcett</td>
