--- a/index.html
+++ b/index.html
@@ -6007,6 +6007,13 @@
 </tr>
 
 <tr>
+<td>Ghosts of Terror</td>
+<td>1976</td>
+<td>Gredown</td>
+<td><a href="GhostsOfTerror/GhostsOfTerror.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Giant Size Creatures</td>
 <td>1974</td>
 <td>Marvel</td>
@@ -9098,6 +9105,13 @@
 <td>1987</td>
 <td>Marvel</td>
 <td><a href="MephistoVs/MephistoVs.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Metal Men</td>
+<td>1963</td>
+<td>DC</td>
+<td><a href="MetalMen/MetalMen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12710,6 +12724,13 @@
 </tr>
 
 <tr>
+<td>Tales of Horror</td>
+<td>1952</td>
+<td>Toby</td>
+<td><a href="TalesOfHorror/TalesOfHorror.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tales of Justice</td>
 <td>1955</td>
 <td>Marvel</td>
@@ -13764,6 +13785,13 @@
 <td>1953</td>
 <td>EC</td>
 <td><a href="WeirdFantasy/WeirdFantasy.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Weird Horrors</td>
+<td>1952</td>
+<td>St. John</td>
+<td><a href="WeirdHorrors/WeirdHorrors.html">Details</a></td>
 </tr>
 
 <tr>
