--- a/Nightmare/Nightmare.html
+++ b/Nightmare/Nightmare.html
@@ -2,16 +2,32 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
-<title> Nightmare </title>
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
+<title>Nightmare</title>
 </head>
 
 <body>
-<img src="Nightmare10.jpg"> <img src="Nightmare11.jpg"><br>
-<img src="Nightmare12.jpg"> <img src="Nightmare13.jpg"><br>
-Series: 4 issues 1953 (#10 - 13) <br>
-Publisher: St. John<br>
+<img src="Nightmare10.jpg"><br>
+4 issues in 1953 (#10 - 13)  by St. John
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Nightmare10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nightmare11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nightmare12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nightmare13.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 First issue in the series starts with issue #10 (continued from Weird Horrors #9). Reprints Weird Thrillers (Ziff-Davis) with new Joe Kubert cover and two pages Everett Raymond Kinstler art. "The Fisherman of Space" (art by Alex Toth), "The Last Man," "the Cycle of Time" (art by Murphy Anderson), "Murderer's Mask" (art by Gene Colan).
 </p>
 </body>
