--- a/Psycho/Psycho.html
+++ b/Psycho/Psycho.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="Psycho01.jpg" title="cover by Brendan Lynch"> <br>
-24 issues 1971-1975 by Skywald
+24 issues 1971-1975, 1 issue Psycho Yearbook by Skywald
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -43,6 +43,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Psycho22.jpg" title="cover by Prieto Muriana"></div>
 <div class="mySlides" style="text-align: center;"><img src="Psycho23.jpg" title="cover by Sebastia Boada"></div>
 <div class="mySlides" style="text-align: center;"><img src="Psycho24.jpg" title="cover by Sebastia Boada"></div>
+<div class="mySlides" style="text-align: center;"><img src="Psycho25.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
