--- a/index.html
+++ b/index.html
@@ -6440,6 +6440,13 @@
 </tr>
 
 <tr>
+<td>Haunt of Horror</td>
+<td>1974</td>
+<td>Marvel</td>
+<td><a href="HauntOfHorror/HauntOfHorror.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Haunted Man</td>
 <td>2000</td>
 <td>Dark Horse</td>
@@ -9990,6 +9997,13 @@
 </tr>
 
 <tr>
+<td>Nightmare</td>
+<td>1970</td>
+<td>Skywald</td>
+<td><a href="NightmareSkywald/NightmareSkywald.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Nightmare on Elm Street</td>
 <td>1984</td>
 <td>New Line Cinema</td>
@@ -11455,6 +11469,13 @@
 <td>Universal</td>
 <td><a href="ScottPilgrim/ScottPilgrim.html">Details</a></td>
 </tr>
+
+<tr>
+<td>Scream</td>
+<td>1973</td>
+<td>Skywald</td>
+<td><a href="Scream/Scream.html">Details</a></td>
+</tr></p><p>
 
 <tr>
 <td>Scribbly</td>
