--- a/ComixBook/ComixBook.html
+++ b/ComixBook/ComixBook.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="ComixBook1.jpg"> <br>
-3 issues in 1974 by Curtis (Marvel)<br>
+3 issues in 1974 by Curtis (Marvel), 2 issues 1975 by Kitchen Sink<br>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -22,6 +22,8 @@
 <div class="mySlides" style="text-align: center;"><img src="ComixBook1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ComixBook2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ComixBook3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ComixBook4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ComixBook5.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
