--- a/Felix/Felix.html
+++ b/Felix/Felix.html
@@ -2,26 +2,43 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Felix the Cat</title>
 </head>
 
 <body>
-<h2>Felix the Cat</h2>
 <img src="Felix001.jpg"> <br>
-Creator: Pat Sullivan, Otto Messmer<br>
-Series: on-going Cartoon Adaptation<br>
-Publisher: Pat Sullivan Studios<br>
+Created by Pat Sullivan and Otto Messmer in 1919 by Paramount
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Felix001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Felix002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Felix003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Felix023.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Felix048.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Felix077.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Felix080.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Felix119.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Felix135.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Felix the Cat is a funny animal cartoon character created in the silent film era with Feline Follies by Paramount Pictures in 1919. The anthropomorphic black cat with his black body, white eyes, and giant grin, coupled with the surrealism of the situations in which his cartoons place him, combine to make Felix one of the most recognized cartoon characters in film history. Felix was the first character from animation to attain a level of popularity sufficient to draw movie audiences.
 </p><p>
-Felix's origins remain disputed. Australian cartoonist/film entrepreneur Pat Sullivan, owner of the Felix character, claimed during his lifetime to be its creator. American animator Otto Messmer, Sullivan's lead animator, has also been credited as such. What is certain is that Felix emerged from Sullivan's studio, and cartoons featuring the character enjoyed success and popularity in the popular culture. Aside from the animated shorts, Felix starred in a comic strip (drawn by Sullivan, Messmer and later Joe Oriolo) beginning in 1923, and his image soon adorned merchandise such as ceramics, toys and postcards. Several manufacturers made stuffed Felix toys. Jazz bands such as Paul Whiteman's played songs about him (1923's "Felix Kept On Walking" and others).
+Felix's origins remain disputed. Australian cartoonist/film entrepreneur Pat Sullivan, owner of the Felix character, claimed during his lifetime to be its creator. American animator Otto Messmer, Sullivan's lead animator, has also been credited as such. What is certain is that Felix emerged from Sullivan's studio, and cartoons featuring the character enjoyed success and popularity in the popular culture. 
+</p><p>
+Aside from the animated shorts, Felix starred in a comic strip (drawn by Sullivan, Messmer and later Joe Oriolo) beginning in 1923, and his image soon adorned merchandise such as ceramics, toys and postcards. Several manufacturers made stuffed Felix toys. Jazz bands such as Paul Whiteman's played songs about him (1923's "Felix Kept On Walking" and others).
 </p>
-Issues:<ul>
-<li><a href="Felix.html">Felix #1</a></li>
-<li><a href="Felix023.html">Felix #23</a></li>
-<li><a href="Felix080.html">Felix #80</a></li>
-<li><a href="Felix135.html">Felix #135</a></li>
-</ul>
+
 </body>
 </html>
