--- a/BillGaines/BillGaines.html
+++ b/BillGaines/BillGaines.html
@@ -10,7 +10,7 @@
 <body>
 <img src="BillGaines.jpg"><br>
 1922 -1992<br>
-Publisher of EC Comics and Mad Magazine
+Creator of publishing giants EC Comics and Mad Magazine
 <p>
 William Maxwell "Bill" Gaines (March 1, 1922 – June 3, 1992), was an American publisher and co-editor of EC Comics. Following a shift in EC's direction in 1950, Gaines presided over what became an artistically influential and historically important line of mature-audience comics. He published the satirical magazine Mad for over 40 years.
 </p><p>
