--- a/index.html
+++ b/index.html
@@ -1740,7 +1740,7 @@
 <tr>
 <td>Astro Boy</td>
 <td>1952</td>
-<td>Kobunsha, Dark Horse</td>
+<td>Kobunsha</td>
 <td><a href="AstroBoy/AstroBoy.html">Details</a></td>
 </tr>
 
@@ -2295,7 +2295,7 @@
 <tr>
 <td>Bill Gaines</td>
 <td>1922</td>
-<td>Publisher</td>
+<td>Creator</td>
 <td><a href="BillGaines/BillGaines.html">Details</a></td>
 </tr>
 
@@ -2527,7 +2527,7 @@
 <tr>
 <td>Blazing Battle Tales</td>
 <td>1975</td>
-<td>Altas Seaboard</td>
+<td>Atlas Seaboard</td>
 <td><a href="BlazingBattleTales/BlazingBattleTales.html">Details</a></td>
 </tr>
 
@@ -3828,7 +3828,7 @@
 <tr>
 <td>Crush</td>
 <td>2003</td>
-<td>DarkHorse</td>
+<td>Dark Horse</td>
 <td><a href="CrushDH/CrushDH.html">Details</a></td>
 </tr>
 
@@ -6393,7 +6393,7 @@
 <tr>
 <td>Happy Hour In America</td>
 <td>2017</td>
-<td>Fantgraphics</td>
+<td>Fantagraphics</td>
 <td><a href="HappyHourInAmerica/HappyHourInAmerica.html">Details</a></td>
 </tr>
 
@@ -7775,6 +7775,13 @@
 <td>2002</td>
 <td>Dark Horse</td>
 <td><a href="Kiss/Kiss.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kitchen</td>
+<td>2015</td>
+<td>Vertigo</td>
+<td><a href="Kitchen/Kitchen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9726,7 +9733,7 @@
 <tr>
 <td>National Comics</td>
 <td>1940</td>
-<td>Quality</td>
+<td>Quality Comics</td>
 <td><a href="National/National.html">Details</a></td>
 </tr>
 
@@ -10335,7 +10342,7 @@
 <tr>
 <td>Pac-Man</td>
 <td>1980</td>
-<td>Bandai Namco</td>
+<td>Bandai</td>
 <td><a href="PacMan/PacMan.html">Details</a></td>
 </tr>
 
@@ -13547,6 +13554,13 @@
 <td>1948</td>
 <td>Timely</td>
 <td><a href="Venus/Venus.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vertigo</td>
+<td>1993</td>
+<td>Publisher</td>
+<td><a href="Vertigo/Vertigo.html">Details</a></td>
 </tr>
 
 <tr>
