--- a/index.html
+++ b/index.html
@@ -2168,6 +2168,13 @@
 </tr>
 
 <tr>
+<td>Bee 29 the Bombardier</td>
+<td>1945</td>
+<td>Spotlight</td>
+<td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Before the Fantastic 4: Grimm and Logan</td>
 <td>2000</td>
 <td>Marvel</td>
@@ -5762,6 +5769,13 @@
 </tr>
 
 <tr>
+<td>Gal Snaps</td>
+<td>1945</td>
+<td>Spotlight</td>
+<td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Galactic Guardians</td>
 <td>1994</td>
 <td>Marvel</td>
@@ -5871,6 +5885,13 @@
 <td>1942</td>
 <td>Timely</td>
 <td><a href="Gayety/Gayety.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gem Comics</td>
+<td>1945</td>
+<td>Spotlight</td>
+<td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7365,6 +7386,13 @@
 </tr>
 
 <tr>
+<td>Jeep Comics</td>
+<td>1945</td>
+<td>Spotlight</td>
+<td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jenifer Renzel</td>
 <td>1970</td>
 <td>Creator</td>
@@ -7460,6 +7488,13 @@
 <td>1941</td>
 <td>Atlas</td>
 <td><a href="Joker/joker.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jolly Dolls</td>
+<td>1945</td>
+<td>Spotlight</td>
+<td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7964,6 +7999,13 @@
 <td>2004</td>
 <td>Dark Horse</td>
 <td><a href="LastTrainToDeadsville/LastTrainToDeadsville.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Latest Comics</td>
+<td>1945</td>
+<td>Spotlight</td>
+<td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11751,6 +11793,13 @@
 </tr>
 
 <tr>
+<td>Ship Ahoy</td>
+<td>1944</td>
+<td>Spotlight</td>
+<td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Shock Detective Cases</td>
 <td>1952</td>
 <td>Star Publications</td>
@@ -12262,6 +12311,13 @@
 </tr>
 
 <tr>
+<td>Spotlight Publishers</td>
+<td>1944</td>
+<td>Publisher</td>
+<td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Spy Cases</td>
 <td>1950</td>
 <td>Marvel</td>
@@ -12745,6 +12801,13 @@
 </tr>
 
 <tr>
+<td>Tailspin Comics</td>
+<td>1944</td>
+<td>Spotlight</td>
+<td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tales from the Crypt</td>
 <td>1950</td>
 <td>EC</td>
@@ -13025,6 +13088,13 @@
 </tr>
 
 <tr>
+<td>Three Ring Comics</td>
+<td>1945</td>
+<td>Spotlight</td>
+<td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Thundarr the Barbarian</td>
 <td>1980</td>
 <td>ABC</td>
@@ -13274,6 +13344,13 @@
 <td>2003</td>
 <td>Marvel</td>
 <td><a href="TruthRedWhiteBlack/TruthRedWhiteBlack.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Twinkle Comics</td>
+<td>1945</td>
+<td>Spotlight</td>
+<td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
 </tr>
 
 <tr>
