--- a/NewFun/NewFun.html
+++ b/NewFun/NewFun.html
@@ -9,11 +9,8 @@
 
 <body>
 <img src="NewFun001.jpg" title="New Fun"> <br>
-Series: 6 issues 1935<br>
-Publisher: National Allied, DC<br>
+6 issues in 1935, 1 collection issue "The Big Book of Fun Comics" 1935 by National Allied (Later DC)<br>
 <p>
-Characters include Jack Woods, Don Drake, Loco Luke. The numbering continues with <a href="../MoreFun/MoreFun.html">More Fun</a> (DC, 1936 series) #v1#7
-</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -28,11 +25,12 @@ Characters include Jack Woods, Don Drake, Loco Luke. The numbering continues wit
 <div class="mySlides" style="text-align: center;"><img src="NewFun004.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewFun005.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewFun006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewFun007.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
-
+Characters include Jack Woods, Don Drake, Loco Luke. The numbering continues with <a href="../MoreFun/MoreFun.html">More Fun</a> (DC, 1936 series) #v1#7. "The Big Book of Fun Comics" consists of reprints from "New Fun The Big Comic Magazine" #1-4.
 </p>
 </body>
 </html>
