--- a/index.html
+++ b/index.html
@@ -7498,6 +7498,13 @@
 </tr>
 
 <tr>
+<td>Journey</td>
+<td>1983</td>
+<td>Aardvark-Vanaheim</td>
+<td><a href="Journey/Journey.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Journey Into Fear</td>
 <td>1951</td>
 <td>Superior</td>
@@ -9812,6 +9819,13 @@
 <td>1960</td>
 <td>Creator</td>
 <td><a href="NeilGaiman/NeilGaiman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Neil The Horse</td>
+<td>1983</td>
+<td>Aardvark-Vanaheim</td>
+<td><a href="NeilTheHorse/NeilTheHorse.html">Details</a></td>
 </tr>
 
 <tr>
