--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
 <tr>
 <td>Adventures of Little Orphan Annie</td>
 <td>1924</td>
-<td>Cuples &amp; Leon, Dell</td>
+<td>Cupples &amp; Leon</td>
 <td><a href="AdventuresOfLittleOrphanAnnie/AdventuresOfLittleOrphanAnnie.html">Details</a></td>
 </tr>
 
@@ -1875,7 +1875,7 @@
 <tr>
 <td>Axe Cop</td>
 <td>2010</td>
-<td>Dark Horse, Fox</td>
+<td>Dark Horse</td>
 <td><a href="AxeCop/AxeCop.html">Details</a></td>
 </tr>
 
@@ -5610,7 +5610,7 @@
 <tr>
 <td>Fraggle Rock</td>
 <td>1983</td>
-<td>Jim Henson Productions</td>
+<td>Jim Henson Company</td>
 <td><a href="FraggleRock/FraggleRock.html">Details</a></td>
 </tr>
 
@@ -11760,7 +11760,7 @@
 <tr>
 <td>Shadow</td>
 <td>1931</td>
-<td>Street and Smith</td>
+<td>Street &amp; Smith</td>
 <td><a href="Shadow/Shadow.html">Details</a></td>
 </tr>
 
@@ -13657,7 +13657,7 @@
 <tr>
 <td>Vic and Blood</td>
 <td>1975</td>
-<td>JQ/LAF</td>
+<td>LQ/LAF</td>
 <td><a href="VicAndBlood/VicAndBlood.html">Details</a></td>
 </tr>
 
