Beyond The Grave

--- a/index.html
+++ b/index.html
@@ -2258,6 +2258,13 @@
 </tr>
 
 <tr>
+<td>Beyond the Grave</td>
+<td>1975</td>
+<td>Charlton</td>
+<td><a href="BeyondTheGrave/BeyondTheGrave.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bible</td>
 <td>-600</td>
 <td>GOD</td>
@@ -9259,6 +9266,13 @@
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="MidnightSonsUnlimited/MidnightSonsUnlimited.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Midnight Tales</td>
+<td>1972</td>
+<td>Charlton</td>
+<td><a href="MidnightTales/MidnightTales.html">Details</a></td>
 </tr>
 
 <tr>
