--- a/JeanGiraud/JeanGiraud.html
+++ b/JeanGiraud/JeanGiraud.html
@@ -26,6 +26,11 @@ Jean Giraud<br>
 <div class="mySlides" style="text-align: center;"><img src="JeanGiraud4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JeanGiraud5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JeanGiraud6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JeanGiraud7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JeanGiraud8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JeanGiraud9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JeanGiraud10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JeanGiraud11.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
