--- a/MichaelKaluta/MichaelKaluta.html
+++ b/MichaelKaluta/MichaelKaluta.html
@@ -29,6 +29,7 @@
 <div class="mySlides" style="text-align: center;"><img src="MichaelKaluta8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="MichaelKaluta9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="MichaelKaluta10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MichaelKaluta11.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
