--- a/SpongeBobSquarePants/SpongeBobSquarePants.html
+++ b/SpongeBobSquarePants/SpongeBobSquarePants.html
@@ -2,17 +2,39 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Sponge Bob Square Pants</title>
 </head>
 
 <body>
-<h2>Sponge Bob Square Pants</h2>
 <img src="SpongeBobSquarePants.jpg"> <br>
-Creator: Stephen Hilenburg<br>
-Publisher: Nickelodeon (Viacom)<br>
+250 episodes from 1996 to today, created by Stephen Hilenburg, distributed by Nickelodeon (Viacom)<br>
 <p>
-SpongeBob SquarePants is an American animated television series and media franchise that has generated $13 billion, created by marine biologist and animator Stephen Hillenburg for Nickelodeon. 
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="SpongeBobSquarePants.jpg" title="Sponge Bob"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpongeBobSquarePants2.jpg" title="Stephen Hillenburg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpongeBobSquarePants3.jpg" title="Patrick Star"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpongeBobSquarePants4.jpg" title="Squidward Tentacles"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpongeBobSquarePants5.jpg" title="Sheldon Plankton"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpongeBobSquarePants6.jpg" title="Sandy Cheeks"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpongeBobSquarePants7.jpg" title="Mr Krabs"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpongeBobSquarePants8.jpg" title="Perl Krabs"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpongeBobSquarePants9.jpg" title="Mrs Puff"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpongeBobSquarePants10.jpg" title="Gary"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+SpongeBob SquarePants is an American animated television series and media franchise that has generated $13 billion, created by marine biologist and animator Stephen Hillenburg for Nickelodeon. Stephen McDannell Hillenburg (1961 – 2018) was an American animator, voice actor, and marine science educator. He is best remembered for creating the Nickelodeon animated television series SpongeBob SquarePants which he also directed, produced, and wrote. He is the founder of the United Plankton Pictures. It has become the fifth-longest-running American animated series. 
 </p><p>
 The series chronicles the adventures and endeavors of the title character and his various friends in the fictional underwater city of Bikini Bottom, which was named for the real-life Pacific coral reef known as Bikini Atoll. The series' popularity has made it a media franchise, as well as the highest rated series to ever air on Nickelodeon, and the most distributed property of MTV Networks (Viacom). 
 </p><p>
