--- a/OutOfTheNight/OutOfTheNight.html
+++ b/OutOfTheNight/OutOfTheNight.html
@@ -2,20 +2,46 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Out Of The Night</title>
 </head>
 
 <body>
-<h2>Out Of The Night</h2>
-<img src="OutOfTheNight01.jpg">
-<img src="OutOfTheNight09.jpg"> <br>
-Series: on-going, 17 issues <br>
-Cover: Ken Bald<br>
-Publisher: 1952 American Comics Group (DC)<br>
+<img src="OutOfTheNight01.jpg"><br>
+17 issues from 1952-1953 by American Comics Group (ACG)<br>
 <p>
-Collection of short horror stories.<br>
-Numbering continues with The Hooded Horseman #18.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="OutOfTheNight01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OutOfTheNight02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OutOfTheNight03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OutOfTheNight04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OutOfTheNight05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OutOfTheNight06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OutOfTheNight07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OutOfTheNight08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OutOfTheNight09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OutOfTheNight10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OutOfTheNight11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OutOfTheNight12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OutOfTheNight13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OutOfTheNight14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OutOfTheNight15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OutOfTheNight16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OutOfTheNight17.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Horror anthology series. The numbering continues with The Hooded Horseman #18.
 </p>
 </body>
 </html>
