--- a/index.html
+++ b/index.html
@@ -12612,6 +12612,13 @@
 </tr>
 
 <tr>
+<td>Strange Fantasy</td>
+<td>1952</td>
+<td>Farrell</td>
+<td><a href="StrangeFantasy/StrangeFantasy.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Strange Stories of Suspense</td>
 <td>1955</td>
 <td>Atlas</td>
