--- a/PlanetComics/PlanetComics.html
+++ b/PlanetComics/PlanetComics.html
@@ -98,22 +98,24 @@
 </div></div>
 </p><p>
 Planet Comics was a science fiction comic book title published by Fiction House from January 1940 to Winter 1953. It was the first comic book dedicated wholly to science fiction. Like most of Fiction House's early comics titles, Planet Comics was a spinoff of a pulp magazine, in this case Planet Stories. Like the magazine before it, Planet Comics featured space operatic tales of muscular, heroic space adventurers who were quick with their "ray pistols" and always running into gorgeous females who needed rescuing from bug-eyed space aliens or fiendish interstellar bad guys.
-
-Planet Comics was the foremost purveyor of good girl art in comic books of the period, and is considered highly collectible by modern fans of comics' Golden Age. It specialized in colorful and lurid stories of interstellar action, ingenuous and attractive heroes and heroines, breezy dialogue, and the “barest smattering of sense and substance” (Benton 1992, p. 27). Its covers usually featured a beautiful, scantily-attired spacewoman with long bare legs being menaced by a frightful alien monster, while a sleek, heroic spaceman comes to her rescue.
-
+</p><p>
+Planet Comics was the foremost purveyor of good girl art in comic books of the period, and is considered highly collectible by modern fans of comics' Golden Age. It specialized in colorful and lurid stories of interstellar action, ingenuous and attractive heroes and heroines, breezy dialogue, and the “barest smattering of sense and substance”. Its covers usually featured a beautiful, scantily-attired spacewoman with long bare legs being menaced by a frightful alien monster, while a sleek, heroic spaceman comes to her rescue.
+</p><p>
 Sometimes, though, Planet Comics reversed this formula: both covers and stories occasionally provided heroines who handily defeated the space aliens and interplanetary villains with little or no assistance from males (the comic was also seen as a fantasy title). Cynics might have noted that this sex-equality strategy in effect simply multiplied the number of lovely girls shown per panel, and insured that each and every panel featured at least one smashing spacegirl.
-
+</p><p>
 The Flint Baker/Space Ranger stories, according to Raymond Miller, "featured such writers as Al Schmidt and Huxley Haldane." Jerry Bails and Hames Ware's Who's Who of American Comic Books mentions Herman Bolstein and Dick Briefer.
-
+</p><p>
 Bails and Ware also list writers including Walter B. Gibson (The Shadow) and Frank Belknap Long, as working on "various features" for Planet Comics throughout the 1940s.
-
+</p><p>
 The strong female heroines of Planet Comics were complemented by Fiction House's employing several female artists to work on such tales, particularly Lily Renée, Marcia Snyder, Ruth Atkinson, and Fran(ces) Hopper (née Dietrick), whose art for "Mysta of the Moon" was often stunning. In addition, many artists who would become well-known names worked on Planet Comics stories over its 13-year history. These included the likes of Murphy Anderson, Matt Baker, Nick Cardy, Joe Doolin, Graham Ingels, George Evans, Ruben Moreira, John Cullen Murphy, George Tuska, and Maurice Whitman.
-
+</p><p>
 The early covers were drawn by industry legend Will Eisner. Later covers were predominantly the work of two men — Dan Zolnerowich (later Dan Zolne) and Joe Doolin. Zolne is believed to have produced covers for issues #10-25 (January 1941 – July 1943), and Doolin is thought to have illustrated all-bar-three of #26-65 (September 1943 – Spring 1951).
-
-While young male readers were no doubt attracted to the pin-up quality of Planet Comics's artwork, letters from readers printed in the comic demonstrate that its readership also included girls, who were perhaps drawn to the array of competent and capable space heroines (Benton 1991, p. 31). Planet Comics was considered by noted fan Raymond Miller to be "perhaps the best of the Fiction House group," as well as "most collected and most valued." In Miller's opinion, it "wasn't really featuring good art or stories... in the first dozen or so issues," not gaining most of "its better known characters" until "about the 10th issue." "Only 3 of [its] long running strips started with the first issue... Flint Baker, Auro - Lord of Jupiter, and the Red Comet."
-
-The comics historian John Benton offers this summary: “Planet Comics was the epitome of breezy, sexy, mindless, action-filled science fiction. In many respects [it was] a throwback to the earlier science fiction magazines and simpler times.”
+</p><p>
+While young male readers were no doubt attracted to the pin-up quality of Planet Comics's artwork, letters from readers printed in the comic demonstrate that its readership also included girls, who were perhaps drawn to the array of competent and capable space heroines (Benton 1991, p. 31). 
+</p><p>
+Planet Comics was considered by noted fan Raymond Miller to be "perhaps the best of the Fiction House group," as well as "most collected and most valued." In Miller's opinion, it "wasn't really featuring good art or stories... in the first dozen or so issues," not gaining most of "its better known characters" until "about the 10th issue." "Only 3 of its long running strips started with the first issue... Flint Baker, Auro - Lord of Jupiter, and the Red Comet."
+</p><p>
+The comics historian John Benton offers this summary: “Planet Comics was the epitome of breezy, sexy, mindless, action-filled science fiction. In many respects it was a throwback to the earlier science fiction magazines and simpler times.”
 </p>
 </body>
 </html>
