--- a/index.html
+++ b/index.html
@@ -9796,7 +9796,7 @@
 <tr>
 <td>National Comics</td>
 <td>1940</td>
-<td>Quality Comics</td>
+<td>Quality</td>
 <td><a href="National/National.html">Details</a></td>
 </tr>
 
@@ -10629,7 +10629,7 @@
 <tr>
 <td>Plastic Man</td>
 <td>1943</td>
-<td>Quality Comics</td>
+<td>Quality</td>
 <td><a href="PlasticMan/PlasticMan.html">Details</a></td>
 </tr>
 
@@ -10664,7 +10664,7 @@
 <tr>
 <td>Police Comics</td>
 <td>1941</td>
-<td>Quality Comics</td>
+<td>Quality</td>
 <td><a href="PoliceComics/PoliceComics.html">Details</a></td>
 </tr>
 
@@ -12068,7 +12068,7 @@
 <tr>
 <td>Smash Comics</td>
 <td>1939</td>
-<td>Quality Comics</td>
+<td>Quality</td>
 <td><a href="SmashComics/SmashComics.html">Details</a></td>
 </tr>
 
@@ -13932,6 +13932,13 @@
 <td>1991</td>
 <td>Epic</td>
 <td><a href="WeaveWorld/WeaveWorld.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Web of Evil</td>
+<td>1952</td>
+<td>Quality</td>
+<td><a href="WebOfEvil/WebOfEvil.html">Details</a></td>
 </tr>
 
 <tr>
