--- a/MarvelTeamUp/MarvelTeamUp.html
+++ b/MarvelTeamUp/MarvelTeamUp.html
@@ -2,13 +2,32 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title> Marvel Team-Up </title>
 </head>
 <body>
 <img src="MarvelTeamUp1972series001.jpg"> <br>
 Publisher: Marvel<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="MarvelTeamUp1972series001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTeamUp1972series002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTeamUp1972series003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTeamUp1972series004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTeamUp1972series005.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Series:<br>
 Marvel Team-Up Volume 1 #1–150 (1972–1985)<br>
 Marvel Team-Up Annual #1-7 (1976)<br>
