--- a/index.html
+++ b/index.html
@@ -3007,6 +3007,13 @@
 </tr>
 
 <tr>
+<td>Captain Science</td>
+<td>1950</td>
+<td>Youthful</td>
+<td><a href="CaptainScience/CaptainScience.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Captain Sternn</td>
 <td>1977</td>
 <td>Tyrannosaurus Press</td>
