--- a/index.html
+++ b/index.html
@@ -6748,6 +6748,13 @@
 </tr>
 
 <tr>
+<td>Horror Stories</td>
+<td>1935</td>
+<td>Popular Publications</td>
+<td><a href="HorrorStories/HorrorStories.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hostage</td>
 <td>2017</td>
 <td>Drawn &amp; Quarterly</td>
