--- a/index.html
+++ b/index.html
@@ -13886,6 +13886,13 @@
 </tr>
 
 <tr>
+<td>Warhammer</td>
+<td>1987</td>
+<td>Games Workshop</td>
+<td><a href="Warhammer/Warhammer.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Warheads</td>
 <td>1992</td>
 <td>Marvel</td>
